--- a/bandTogether/bandTogether.csproj
+++ b/bandTogether/bandTogether.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BandSevices\FacebookService.cs" />
     <Compile Include="Services\BandSevices\SpotifyServices.cs" />
+    <Compile Include="Services\BandSevices\YoutubeManager.cs" />
     <Compile Include="Services\BandSevices\YoutubeServices.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -296,6 +297,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Band\Index.cshtml" />
+    <Content Include="Views\Shared\_USERLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
