--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
-Private/
-Secrets.cs
+
+bandTogether/Private/Secrets.cs
 
 
 # Build results
