--- a/bandTogether/web.config
+++ b/bandTogether/web.config
@@ -5,11 +5,14 @@
   -->
 <configuration>
   <configSections>
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
-  <connectionStrings>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-bandTogether-20191120102325.mdf;Initial Catalog=aspnet-bandTogether-20191120102325;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=ALEXHARDY6EE6\SQLEXPRESS;Initial Catalog=aspnet-bandTogether-20191120102325;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
